@@ -1,3 +1,7 @@
+2008-01-02  Francois Dumont  <dums@users.sourceforge.net>
+
+	* src/fstream.cpp: #1854345 bug fixed.
+
 2007-12-11  Petr Ovtchenkov  <complement@users.sourceforge.net>
 
 	* build/Makefiles/gmake/lib/gcc.mak, build/Makefiles/gmake/app/gcc.mak:
